--- a/mpx-project/package.json
+++ b/mpx-project/package.json
@@ -11,13 +11,16 @@
     "watch:cross": "npm run watch --modes=wx,ali,web",
     "build:cross": "npm run build --modes=wx,ali,web",
     "watch:web": "npm run watch --mode=web",
-    "help": "node ./build/build.js --help"
+    "help": "node ./build/build.js --help",
+    "tailwind": "tailwindcss -i ./src/tailwind.css -c tailwind.config.js -o ./dist/wx/styles/tailwind4b67fe16.wxss"
   },
   "author": "sarahliu <sarahliu@didiglobal.com>",
   "license": "ISC",
   "dependencies": {
     "@mpxjs/api-proxy": "^2.7.1",
     "@mpxjs/core": "^2.7.18",
+    "postcss": "^8.4.12",
+    "postcss-loader": "^6.2.1",
     "vue": "^2.6.10",
     "vue-i18n": "^8.15.3"
   },
@@ -57,7 +60,6 @@
     "jest": "^27.4.5",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
-    "postcss": "^8.4.12",
     "rimraf": "^2.6.2",
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
